tests/rosetta/out/Swift/arbitrary-precision-integers-included-.swift
// Generated by Mochi compiler v0.10.26 on 2025-07-16T09:55:00Z
func pow_int(_ base: Int, _ exp: Int) -> Int {
    var result = 1
    var b = base
    var e = exp
    while e > 0 {
        if e % 2 == 1 {
            result = result * b
        }
        b = b * b
        e = Int((e / 2))
    }
    return result
}
func pow_big(_ base: inout bigint, _ exp: Int) -> bigint {
    var result: bigint = 1
    var b: bigint = base
    var e = exp
    while e > 0 {
        if e % 2 == 1 {
            result = result * b
        }
        b = b * b
        e = Int((e / 2))
    }
    return result
}
var e1 = pow_int(3, 2)
var e2 = pow_int(4, e1)
var base: bigint = 5
var x: bigint = pow_big(&base, e2)
var s = String(x)
print("5^(4^(3^2)) has", s.count, "digits:", String(s[s.index(s.startIndex, offsetBy: 0)..<s.index(s.startIndex, offsetBy: 20)]), "...", String(s[s.index(s.startIndex, offsetBy: s.count - 20)..<s.index(s.startIndex, offsetBy: s.count)]))
